<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".MainActivity">

    <Space
        android:id="@+id/space"
        android:layout_width="416dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="392dp"
        android:layout_height="502dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toTopOf="@+id/space2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="471dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/FnameTxt"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/fName"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/LnameTxt"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/lName"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/InitialTxt"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/middleI"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/genderCard"
                android:layout_width="318dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:cardCornerRadius="7dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/maleRadBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/genderM"
                        android:textColor="#304FFE"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/femaleRadBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/genderF"
                        android:textColor="#D50000"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

            <EditText
                android:id="@+id/heightInt"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/height"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/weightInt"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="numberDecimal" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:id="@+id/space2"
        android:layout_width="401dp"
        android:layout_height="9dp"
        app:layout_constraintBottom_toTopOf="@+id/resultBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/resultBtn"
        android:layout_width="100dp"
        android:layout_height="92dp"
        android:layout_marginBottom="53dp"
        android:contentDescription="@string/calcBMI"
        android:contextClickable="false"
        android:elevation="25dp"
        android:scaleType="fitXY"
        android:src="@drawable/proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/space2"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

</androidx.constraintlayout.widget.ConstraintLayout>